<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/compartir"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/limpiar"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_ajustes"
        android:title="@string/ajustes" />
    <item android:id="@+id/calificar"
        android:title="@string/calificar" />
    <item android:id="@+id/comparirApp"
        android:title="@string/compartir_app" />
    <item android:title="@string/mas_herramientas" >
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/menu_productosNot"
                android:title="@string/productos_notables" />
            <item android:id="@+id/menu_hexa"
                android:title="@string/hexatext" />
            <item android:id="@+id/menu_mcm"
                android:title="@string/mcm" />
            <item android:id="@+id/menu_recta"
                android:title="@string/recta" />
            <item android:id="@+id/menu_trigonometria"
                android:title="@string/trigonometria" />
        </menu>
    </item>
</menu>
