<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ResicoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/banner_h">

        <LinearLayout
            android:padding="@dimen/margin_double"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_fragment"
                android:hint="@string/subtotal">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSubtotalResico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:textSize="@dimen/sp_2"
                    android:maxLength="15"
                    android:gravity="end"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_fragment"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spinIvaResico"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:spinnerMode="dialog"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_dollar"
                    android:id="@+id/fieldIvaResico"
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:hint="@string/iva">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtIvaResico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/sp_3"
                        android:gravity="end"
                        android:focusable="false"
                        android:inputType="none"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_fragment"
                android:orientation="horizontal">
                <Spinner
                    android:visibility="invisible"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:spinnerMode="dialog"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_dollar"
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:hint="@string/isr_r">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtIsrResico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/sp_3"
                        android:gravity="end"
                        android:focusable="false"
                        android:inputType="none"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_fragment"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinIVARResico"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_min"
                android:spinnerMode="dialog"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_dollar"
                android:id="@+id/fieldIvaRResico"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:hint="@string/iva_r">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtIvaRResico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:textSize="@dimen/sp_3"
                    android:gravity="end"
                    android:focusable="false"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    <!--cedular-->
            <LinearLayout
                android:id="@+id/lyCedularResico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_fragment"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spinCedularResico"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:spinnerMode="dialog"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldPercentCedularResico"
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:hint="%">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPercentCedularResico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/sp_3"
                        android:gravity="end"
                        android:maxLength="5"
                        android:inputType="numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldCedularResico"
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    app:startIconDrawable="@drawable/ic_dollar"
                    android:hint="@string/Cedular">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtCedularResico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/sp_3"
                        android:focusable="false"
                        android:inputType="none"
                        android:maxLength="21"
                        android:gravity="end"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_fragment"
                android:hint="@string/total">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTotalResico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:gravity="end"
                    android:textSize="@dimen/sp_1"
                    android:maxLength="22"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icInfoResico"
                android:layout_marginVertical="@dimen/margin_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_info" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>